--- a/main.html
+++ b/main.html
@@ -13,8 +13,8 @@
 
 <body>
 	<form id="form1" onsubmit="getFormvalue()">
-		First name: <input type="text" name="fname"><br>
-		Last name: <input type="text" name="lname"><br>
+		First name: <input id="first-name" type="text" name="fname"><br>
+		Last name: <input id="last-name" type="text" name="lname"><br>
 		<input type="submit" value="Submit">
 	</form>
 	
